<resources>
    <string name="app_name">Boceto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Menú</string>
    <string name="menu_gallery">Notificasiones</string>
    <string name="menu_slideshow">Ayuda</string>
    <string name="menu_salir">Salir</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="name_contacto">CONTÁCTANOS</string>
    <string name="name_pedidos">MIS PEDIDOS</string>
    <string name="name_catalogo">CATALOGO</string>

    <string name="name_img1">img1</string>
    <string name="name_img2">img2</string>
    <string name="name_img3">img3</string>
    <string name="name_img4">img4</string>
    <string name="name_img5">img5</string>

    <string name="name_textCatalogo">Catalogo de vehículos</string>
    <string name="name_secc">Sección de repuestos</string>

    <string name="name_imgregreso">Regreso</string>
    <string name="name_spiner">Spinner</string>
    <string name="name_scrol">ScrolView</string>


    <string name="name_fresa">primerfre</string>
    <string name="name_papaya">primerpapa</string>

</resources>